--- a/www/css/web.css
+++ b/www/css/web.css
@@ -1,12 +1,6 @@
-html, body {
+html, body, #map {
   margin: 0;
   padding: 0;
-}
-#map {
-  height: 400px;
-}
-#qr{
-	width: 100px;
-	margin: 0 auto;
-	padding: 5px;
+  width: 100%;
+  height: 100%;
 }
